aux_source_directory(. SRC)
include_directories("./include")

add_executable(GetStationData GetStationData.cpp)
set_target_properties(GetStationData PROPERTIES SUFFIX ".exe")
if(UNIX)
	target_link_libraries(GetStationData ${GDAL_LIBRARIES} rt resolv)
endif(UNIX)
if(MSVC)
	target_link_libraries(GetStationData ${GDAL_LIBRARIES})
endif(MSVC)

add_executable(NewmarkDisp NewmarkDisp.cpp)
set_target_properties(NewmarkDisp PROPERTIES SUFFIX ".exe")
if(UNIX)
	target_link_libraries(NewmarkDisp ${GDAL_LIBRARIES} rt resolv)
endif(UNIX)
if(MSVC)
	target_link_libraries(NewmarkDisp ${GDAL_LIBRARIES})
endif(MSVC)